// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`composeCharacter > 기본 세트 beginner (대검 대기) 1`] = `
{
  "foot": [
    10,
    16,
  ],
  "rows": [
    "............h..",
    ".......hhhhhh..",
    "......hhhhhhhh.",
    ".....hhhhhhhhhh",
    ".....hhhhhhshhh",
    "....hhhhsssssss",
    "....hhhsssEssEs",
    "....hhhsssEssEs",
    ".....hhssBsssBs",
    "........ssssss.",
    "......kkkkkkkk.",
    ".....ktttttttty",
    "......stttttts.",
    ".......gggggg..",
    ".......pp.pp...",
    ".......ss.ssy..",
    ".......fffmfff.",
    "........mm.....",
    ".......mm......",
    "......mm.......",
    ".....mm........",
    "....mm.........",
    "...mm..........",
    "..mm...........",
    ".mm............",
    "m..............",
  ],
}
`;

exports[`composeCharacter > 기본 세트 knight (대검 대기) 1`] = `
{
  "foot": [
    10,
    16,
  ],
  "rows": [
    "............h..",
    ".......hhhhhh..",
    "......hhhhhhhh.",
    ".....hhhhhhhhhh",
    ".....hhhhhhshhh",
    "....hhhhsssssss",
    "....hhhsssEssEs",
    "....hhhsssEssEs",
    ".....hhssBsssBs",
    "........ssssss.",
    ".....CkkkkkkkAA",
    "...CCkAAAAAAAAA",
    "..CCCCsAAAAAAs.",
    "..CCCCCgggggg..",
    ".CCCCC.PP.PP...",
    ".CCCCC.AA.AAy..",
    "CCCCC..fffmfff.",
    "........mm.....",
    ".......mm......",
    "......mm.......",
    ".....mm........",
    "....mm.........",
    "...mm..........",
    "..mm...........",
    ".mm............",
    "m..............",
  ],
}
`;

exports[`composeCharacter > 기본 세트 rogue (대검 대기) 1`] = `
{
  "foot": [
    10,
    16,
  ],
  "rows": [
    ".......OOOOOO...",
    "......OOOOOOOO..",
    ".OO..OOOOOOOOOO.",
    "..OOOOOOOOOOOOOO",
    "....OOOOhhhshhOO",
    "...OOOOhsssssss.",
    "...OOOOsssEssEs.",
    "...OOOOsssEssEs.",
    "....OOOssBsssBs.",
    "........kkkkkk..",
    "......kkkkkkkk..",
    ".....kVVVVVVVVy.",
    "......sVVVVVVs..",
    ".......gggggg...",
    ".......PP.PP....",
    ".......PP.PPy...",
    ".......fffmfff..",
    "........mm......",
    ".......mm.......",
    "......mm........",
    ".....mm.........",
    "....mm..........",
    "...mm...........",
    "..mm............",
    ".mm.............",
    "m...............",
  ],
}
`;

exports[`composeCharacter > 기본 세트 wizard (대검 대기) 1`] = `
{
  "foot": [
    10,
    19,
  ],
  "rows": [
    "....HHH..........",
    "......HHH........",
    ".......HHHH......",
    ".......HHHHH.....",
    "......HHHHHHHH...",
    "......yyyyyyyy...",
    "...HHHHHHHHHHHHHH",
    ".....hhhhhhshhh..",
    "....hhhhsssssss..",
    "....hhhsssEssEs..",
    "....hhhsssEssEs..",
    ".....hhssBsssBs..",
    "........ssssss...",
    "......kkkkkkkk...",
    ".....kRRRRRRRRy..",
    "......sRRRRRRs...",
    ".......yyyyyy....",
    "......RRRRRRRR...",
    ".....RRRRRRRRR...",
    ".......fffmfff...",
    "........mm.......",
    ".......mm........",
    "......mm.........",
    ".....mm..........",
    "....mm...........",
    "...mm............",
    "..mm.............",
    ".mm..............",
    "m................",
  ],
}
`;
